# formurae

./: .gitignore  APPLICATIONS.md  CHANGELOG.md  DEVELOPMENT.md  DSL-DESIGN.md  LICENSE  Makefile  README.md  Setup.hs  UPSTREAM.md  fec.cabal  formurae.cabal  setup.sh
TODO/: README.md  boundary-declaration.md  boundary-yaml-consistency.md  component-projection-extensions.md  sbp-characteristic-generalization.md  sbp-high-order-closures.md  sbp-sat-patterns.md  time-staggering-declaration.md
app/formurae/: Main.hs
app/formurae-post/: Main.hs
app/formurae-pre/: Main.hs
design/: 20260708-core-semantics.md  20260709-coordinate-aware-use.md  20260709-dot-contractwith-tensor-operators.md  20260709-egison-style-indexed-defs.md  20260709-indexed-expr-ast-implementation.md  20260709-strict-indexed-fields.md  20260710-collocated-dec-modes.md  20260710-tensor-expr-ir-roadmap.md  20260711-egison-centered-grid-semantics.md  20260711-pre-post-fec-pipeline.md  20260713-quoted-derivative-and-minimal-discrete-surface.md  20260714-yinyang-overset.md
examples/acoustic3d/: ac_check.c  acoustic3d.egi  acoustic3d.feir  acoustic3d.fme  acoustic3d.fmr  acoustic3d.yaml
examples/burgers3d/: burgers3d.egi  burgers3d.fe  burgers3d.feir  burgers3d.fme  burgers3d.fmr  burgers3d.yaml  burgers_check.c
examples/cahnhilliard3d/: cahnhilliard3d.egi  cahnhilliard3d.fe  cahnhilliard3d.feir  cahnhilliard3d.fme  cahnhilliard3d.fmr  cahnhilliard3d.yaml  ch_check.c
examples/diffusion1d/: diffusion1d.egi  diffusion1d.fe  diffusion1d.feir  diffusion1d.fme  diffusion1d.fmr  diffusion1d.yaml  diffusion1d_check.c
examples/diffusion2d/: diffusion2d.egi  diffusion2d.fe  diffusion2d.feir  diffusion2d.fme  diffusion2d.fmr  diffusion2d.yaml  diffusion2d_check.c
examples/diffusion3d/: diffusion3d.egi  diffusion3d.fe  diffusion3d.feir  diffusion3d.fme  diffusion3d.fmr  main_check.c
examples/dirichlet_diffusion/: dirichlet_check.c  dirichlet_diffusion.egi  dirichlet_diffusion.fe  dirichlet_diffusion.feir  dirichlet_diffusion.fme  dirichlet_diffusion.fmr  dirichlet_diffusion.yaml
examples/divergence2d/: divergence2d.egi  divergence2d.fe  divergence2d.feir  divergence2d.fme  divergence2d.fmr  divergence2d.yaml  divergence2d_check.c
examples/elastic3d/: e1  elastic3d.egi  elastic3d.fe  elastic3d.feir  elastic3d.fme  elastic3d.fmr  elastic3d.yaml  elastic_check.c  eprobe
examples/euler_sod/: euler_sod.egi  euler_sod.fe  euler_sod.feir  euler_sod.fme  euler_sod.fmr  euler_sod.yaml  sod_check.c
examples/highorder4/: hi4_check.c  highorder4.egi  highorder4.fe  highorder4.feir  highorder4.fme  highorder4.fmr  highorder4.yaml
examples/hyperbolic/: hyp_check.c  hyperbolic.egi  hyperbolic.fe  hyperbolic.feir  hyperbolic.fme  hyperbolic.fmr  hyperbolic.yaml
examples/kleingordon/: kg_check.c  kleingordon.egi  kleingordon.fe  kleingordon.feir  kleingordon.fme  kleingordon.fmr  kleingordon.yaml
examples/ks3d/: ks3d.egi  ks3d.fe  ks3d.feir  ks3d.fme  ks3d.fmr  ks3d.yaml  ks_check.c
examples/lbm_d3q19/: lbm_check.c  lbm_d3q19.egi  lbm_d3q19.feir  lbm_d3q19.fme  lbm_d3q19.fmr  lbm_d3q19.yaml
examples/maxwell3d/: maxwell3d.egi  maxwell3d.fe  maxwell3d.feir  maxwell3d.fme  maxwell3d.fmr  maxwell3d.yaml  maxwell_check.c
examples/maxwell3d_yee/: maxwell3d_yee.egi  maxwell3d_yee.feir  maxwell3d_yee.fme  maxwell3d_yee.fmr  maxwell3d_yee.yaml  maxwell_yee_check.c
examples/maxwell_dec/: dec_check.c  maxwell_dec.egi  maxwell_dec.fe  maxwell_dec.feir  maxwell_dec.fme  maxwell_dec.fmr
examples/metric_sphere/: metric_sphere.egi  metric_sphere.fe  metric_sphere.feir  metric_sphere.fme  metric_sphere.fmr  metric_sphere.yaml  sphere_check.c
examples/metric_torus/: metric_check.c  metric_torus.egi  metric_torus.fe  metric_torus.feir  metric_torus.fme  metric_torus.fmr  metric_torus.yaml
examples/mhd_ot/: mhd_check.c  mhd_ot.egi  mhd_ot.feir  mhd_ot.fme  mhd_ot.fmr  mhd_ot.yaml
examples/pearson3d/: pearson3d.egi  pearson3d.fe  pearson3d.feir  pearson3d.fme  pearson3d.fmr  pearson3d.yaml  pearson_check.c
examples/polar2d/: polar2d.egi  polar2d.fe  polar2d.feir  polar2d.fme  polar2d.fmr  polar2d.yaml  polar_check.c
examples/sbp_diffusion1d/: sbp_check.c  sbp_diffusion1d.egi  sbp_diffusion1d.feir  sbp_diffusion1d.fme  sbp_diffusion1d.fmr
figures/: dump_colloc.c  dump_yee.c  gen.sh  ref1d_colloc  ref1d_colloc.c
formura-patch/: formura-ghc96.patch
future-work/: general-metric.en.html  general-metric.ja.html
gallery/: gen.sh  index.html  usage.html
lib/: fmr-direct3d.egi  fmrdsl.egi  fmrgen.egi  fmrlegacy3d.egi  formurae-feir.egi  formurae-geometry.egi  formurae-grid.egi  formurae-operators.egi  formurae-primitives.egi  formurae-runtime.egi  formurae-tensor.egi
mpistub/: mpi.h
spec/: egison-normalization-v1.list  egison-normalization.list  feir-primitives-v1.sexp  feir-primitives.sexp
tests/: compiler_suite.sh  egison_machine_output.sh  fec_source_spans.hs  fec_tensor_expr.sh  feir_codec.hs  feir_egison_wire.hs  feir_fingerprint.hs  feir_primitive_bindings.hs  feir_primitive_manifest.hs  feir_registry_fingerprint.hs  feir_sexpr.hs  feir_validate.hs  formurae_divg_rank_error.egi  formurae_feir_lib.egi  formurae_form_operators_2d_lib.egi  formurae_form_operators_lib.egi  formurae_geometry_lib.egi  formurae_grid_errors.sh  formurae_grid_lib.egi  formurae_hodge_variable_metric.fme  formurae_metric_tensor_ops.fme  formurae_musical_ops.fme  formurae_musical_variable_metric.fme  formurae_native_rank2_ops.fme  formurae_opaque_derivative_error.egi  formurae_opaque_errors.sh  formurae_opaque_lib.egi  formurae_operator_errors.sh  formurae_operators_lib.egi  formurae_primitive_bindings_lib.egi  formurae_remaining_primitives_lib.egi  formurae_runtime_errors.sh  formurae_runtime_field_mismatch.egi  formurae_runtime_field_shape_mismatch.egi  formurae_runtime_form_mismatch.egi  formurae_runtime_lib.egi  formurae_runtime_shape_mismatch.egi  formurae_runtime_tensor_ops.fme  formurae_standard_ops.fme  formurae_tensor_bridge.sh  (+53 more)
tools/: fec.py  generate-feir-primitives.hs  run_egison_machine.sh  run_formurae_normalization.sh
(+278 files in other folders)
