cabal-version:      2.4
name:               fec
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Egi
maintainer:         satoshi.egi@rakuten.com
copyright:          2026 Satoshi Egi
synopsis:           The Formurae (.fme) compiler: mathematical stencil language to embedded Egison
description:
    Translates Formurae, the .fme surface language (field declarations plus
    index-notation and differential-form equations), into a compact embedded
    Egison program.  fec expands user definitions and the coordinate-operator
    prelude through one TensorExpr path, resolves indices and field placement,
    and emits only the residual model-specific context.  Generated programs
    run with lib/formurae-tensor.egi, lib/fmrgen.egi, and
    lib/formurae-runtime.egi; Egison evaluates the residual expressions,
    normalizes the CAS result, and emits .fmr through the shared runtime.
build-type:         Simple

executable fec
    main-is:          Main.hs
    other-modules:    Formurae.Common
                    , Formurae.BackendPlan
                    , Formurae.Index
                    , Formurae.Syntax
                    , Formurae.TensorExpr
    hs-source-dirs:   fec/src
    build-depends:    base >=4.17 && <5
    default-language: Haskell2010
    ghc-options:      -Wall
