cabal-version:      2.4
name:               fec
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Egi
maintainer:         satoshi.egi@rakuten.com
copyright:          2026 Satoshi Egi
synopsis:           Formurae continuum normalization and discrete lowering pipeline
description:
    pre-fec parses Formurae's mathematical surface language and emits an
    Egison normalization program.  Egison produces versioned FEIR containing
    derivative function symbols; post-fec validates that interface, selects
    stencil implementations, and emits Formura code.
build-type:         Custom
data-files:         spec/feir-primitives-v1.sexp
extra-source-files: spec/feir-primitives-v1.sexp
                  , spec/egison-normalization-v1.list
                  , lib/formurae-primitives.egi
                  , fec/src/Formurae/FEIR/PrimitiveBindingGenerator.hs
                  , tools/generate-feir-primitives.hs

custom-setup
    setup-depends:    base >=4.17 && <5
                    , Cabal >=2.4 && <4
                    , process >=1.6 && <1.7

library
    exposed-modules:  Formurae.Common
                    , Formurae.FEIR.Codec
                    , Formurae.FEIR.Fingerprint
                    , Formurae.FEIR.PrimitiveBindings
                    , Formurae.FEIR.PrimitiveManifest
                    , Formurae.FEIR.RegistryFingerprint
                    , Formurae.FEIR.SExpr
                    , Formurae.FEIR.Syntax
                    , Formurae.FEIR.Validate
                    , Formurae.Index
                    , Formurae.Pre.Effect
                    , Formurae.Pre.EmitEgison
                    , Formurae.Pre.Parse
                    , Formurae.Pre.Registry
                    , Formurae.Post.BackendPlan
                    , Formurae.Post.Compile
                    , Formurae.Post.Diagnostic
                    , Formurae.Post.ExplicitStencil
                    , Formurae.Post.FMR
                    , Formurae.Post.Geometry
                    , Formurae.Post.Location
                    , Formurae.Post.Normalize
                    , Formurae.Post.Profile
                    , Formurae.Post.PrimitiveContract
                    , Formurae.Post.Stencil
                    , Formurae.Syntax
                    , Formurae.TensorExpr
    hs-source-dirs:   fec/src
    build-depends:    base >=4.17 && <5
    default-language: Haskell2010
    ghc-options:      -Wall

executable post-fec
    main-is:          Main.hs
    hs-source-dirs:   fec/app/post-fec
    build-depends:    base >=4.17 && <5
                    , fec
    default-language: Haskell2010
    ghc-options:      -Wall

executable pre-fec
    main-is:          Main.hs
    hs-source-dirs:   fec/app/pre-fec
    other-modules:    Paths_fec
    build-depends:    base >=4.17 && <5
                    , fec
                    , filepath
    autogen-modules:  Paths_fec
    default-language: Haskell2010
    ghc-options:      -Wall
