cabal-version:      2.4
name:               formurae
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Satoshi Egi
maintainer:         egi@egison.org
copyright:          2026 Satoshi Egi
synopsis:           Formurae continuum normalization and discrete lowering pipeline
category:           Compilers/Interpreters
homepage:           https://github.com/egison/formurae
bug-reports:        https://github.com/egison/formurae/issues
description:
    formurae-pre parses Formurae's mathematical surface language and emits an
    Egison normalization program.  Egison produces versioned FEIR containing
    derivative function symbols; formurae-post validates that interface,
    selects stencil implementations, and emits Formura code.  The formurae
    executable drives the complete installed toolchain through Formura C code
    generation.
build-type:         Custom
tested-with:        GHC ==9.6.7
                  , GHC ==9.10.1
data-files:         spec/feir-primitives.sexp
                  , spec/egison-normalization.list
                  , lib/formurae-tensor.egi
                  , lib/formurae-geometry.egi
                  , lib/formurae-primitives.egi
                  , lib/formurae-operators.egi
                  , lib/formurae-feir.egi
extra-doc-files:    README.md
                  , CHANGELOG.md
extra-source-files: src/Formurae/FEIR/PrimitiveBindingGenerator.hs
                  , tools/generate-feir-primitives.hs

custom-setup
    setup-depends:    base >=4.17 && <5
                    , Cabal >=2.4 && <4
                    , process >=1.6 && <1.7

library
    exposed-modules:  Formurae.Common
                    , Formurae.FEIR.Codec
                    , Formurae.FEIR.Fingerprint
                    , Formurae.FEIR.PrimitiveBindings
                    , Formurae.FEIR.PrimitiveManifest
                    , Formurae.FEIR.RegistryFingerprint
                    , Formurae.FEIR.SExpr
                    , Formurae.FEIR.Syntax
                    , Formurae.FEIR.Validate
                    , Formurae.Index
                    , Formurae.Pre.Effect
                    , Formurae.Pre.EmitEgison
                    , Formurae.Pre.FormOperator
                    , Formurae.Pre.Parse
                    , Formurae.Pre.Registry
                    , Formurae.Pre.TypeCheck
                    , Formurae.Post.BackendPlan
                    , Formurae.Post.Compile
                    , Formurae.Post.Diagnostic
                    , Formurae.Post.ExplicitStencil
                    , Formurae.Post.FMR
                    , Formurae.Post.Geometry
                    , Formurae.Post.Location
                    , Formurae.Post.Normalize
                    , Formurae.Post.Profile
                    , Formurae.Post.PrimitiveContract
                    , Formurae.Post.Stencil
                    , Formurae.Syntax
                    , Formurae.TensorExpr
    hs-source-dirs:   src
    build-depends:    base >=4.17 && <5
    default-language: Haskell2010
    ghc-options:      -Wall

executable formurae-post
    main-is:          Main.hs
    hs-source-dirs:   app/formurae-post
    build-depends:    base >=4.17 && <5
                    , formurae
    default-language: Haskell2010
    ghc-options:      -Wall

executable formurae-pre
    main-is:          Main.hs
    hs-source-dirs:   app/formurae-pre
    other-modules:    Paths_formurae
    build-depends:    base >=4.17 && <5
                    , filepath >=1.4 && <1.6
                    , formurae
    autogen-modules:  Paths_formurae
    default-language: Haskell2010
    ghc-options:      -Wall

executable formurae
    main-is:          Main.hs
    hs-source-dirs:   app/formurae
    other-modules:    Paths_formurae
    build-depends:    base >=4.17 && <5
                    , directory >=1.3 && <1.4
                    , filepath >=1.4 && <1.6
                    , process >=1.6 && <1.7
    autogen-modules:  Paths_formurae
    default-language: Haskell2010
    ghc-options:      -Wall

source-repository head
    type:             git
    location:         https://github.com/egison/formurae.git
